# three-word-sequences

./: .gitignore  README.md  actionlint  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: flake8.yml  tests.yml
sample/: annakarenina.txt  donquixote.txt  mobydick.txt
src/challenge/: app.py
tests/: test_app.py
web_app/: Dockerfile  app.py  docker-compose.yaml  program.py  requirements_web.txt
web_app/templates/: form.html  result.html
