[metadata]
name = challenge
description = Programmed solution for New Relic Challenge - Azure Cloud Engineer
author = Pranay Prathipati
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    challenge
install_requires =
    nltk>=3.7
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
challenge = py.typed

[flake8]
max-line-length = 160